# Higgs_boson

./: .gitignore  BLOCKCHAIN_INFO.md  BLOCKCHAIN_INFO_EN.md  CHANGELOG.md  README.md  README_EN.md  SIGNATURE.sha256  pyproject.toml
docs/: LAYER_STACK.md  LAYER_STACK_EN.md
higgs_phenomenology/: __init__.py  boson_phenomenology.py  constants.py  contracts.py  discovery_context.py  extension_hooks.py  field_symmetry.py  foundation.py  mass_and_couplings.py  mass_generation.py  mechanism.py  open_questions.py  potential_energy.py  screening.py
scripts/: cleanup_generated.py  generate_signature.py  release_check.py  verify_package_identity.py  verify_signature.py
tests/: conftest.py  test_higgs_foundation.py  test_package_integrity.py
